{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 39,
  "lineage": "c868b780-5435-ca74-287f-71a2416a9430",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lattice_ipv4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2077716331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-08d9db512f7ada124"
            ],
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-06b80a3d192542635",
            "security_group_rule_id": "sgr-0dacdb762892c520a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ec2_managed_prefix_list.lattice_ipv4",
            "data.aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lattice_ipv6_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2346234479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-059d8786dae17d9ec"
            ],
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-06b80a3d192542635",
            "security_group_rule_id": "sgr-0a25a428ad4ee9a4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ec2_managed_prefix_list.lattice_ipv6",
            "data.aws_eks_cluster.this"
          ]
        }
      ]
    }
  ]
}